syntax = "proto3";

package pb;

//--go_opt=paths=source_relative, ignore absolute dir

option go_package = ".;pb";
option java_package = "com.github.xwi88";

// The request message containing the user's name.
message HelloRequest {
    string node_name = 1;
    string ip = 2;
    string name = 3;
    string command = 4; // request exec command, and response.
    string message = 5;
}

enum OSType {
    UNKNOWN_OS = 0;
    IOS = 1;
    ANDROID = 2;
}

// The response message containing the greetings
message HelloReply {
    string node_name = 1;
    string ip = 2;
    string message = 3;
}
